crates/aura-macros/tests/boundaries/strong_reference_missing_domain.rs
#[aura_macros::strong_reference]
struct MissingDomain;

fn main() {}
